fix(css):Fixing alignment of buttons

--- a/css/style.css
+++ b/css/style.css
@@ -5461,7 +5461,8 @@ ul{
 }
 
 .about-button-container a {
-  margin-right: 3em;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .about-image-item{
